# solidhunter

./: .gitignore  CONTRIBUTING.md  Cargo.toml  README.md  test.sol
.github/: PULL_REQUEST_TEMPLATE.md
solc-wrapper/: Cargo.toml
solc-wrapper/src/: error.rs  lib.rs  utils.rs
solc-wrapper/src/ast/: ast.rs  error.rs  mod.rs  new_ast.rs  parse.rs  utils.rs
solc-wrapper/src/solc/: command.rs  error.rs  mod.rs
solc-wrapper/src/version/: error.rs  mod.rs  version.rs
solc-wrapper/tests/files/ast/: Assignment.json  BinaryOperation.json  Block.json  Break.json  Conditional.json  Continue.json  ContractDefinition.json  DoWhileStatement.json  ElementaryTypeName.json  ElementaryTypeNameExpression.json  EmitStatement.json  EnumDefinition.json  EnumValue.json  ErrorDefinition.json  EventDefinition.json  ExpressionStatement.json  ForStatement.json  FunctionCall.json  FunctionCallOptions.json  FunctionDefinition.json  FunctionTypeName.json  Identifier.json  IfStatement.json  ImportDirective.json  IndexAccess.json  IndexRangeAccess.json  InheritanceSpecifier.json  InlineAssembly.json  Literal.json  MemberAccess.json  ModifierDefinition.json  ModifierInvocation.json  NewExpression.json  ParameterList.json  PlaceholderStatement.json  PragmaDirective.json  Return.json  RevertStatement.json  SourceUnit.json  StructDefinition.json  (+10 more)
solidhunter-cli/: Cargo.toml
solidhunter-lib/: Cargo.toml
solidhunter-lib/src/: lib.rs  linter.rs  types.rs
solidhunter-lib/src/rules/: factory.rs  mod.rs  rule_impl.rs  types.rs
solidhunter-lib/src/rules/best_practises/: code_complexity.rs  function_max_lines.rs  line_maxlen.rs  max_states_count.rs  mod.rs  reason_string.rs
solidhunter-lib/src/rules/miscellaneous/: mod.rs  quotes.rs
solidhunter-lib/src/rules/naming/: contract_name_pascalcase.rs  func_name_camelcase.rs  func_param_name_camelcase.rs  mod.rs  use_forbidden_name.rs
solidhunter-lib/src/rules/order/: import_on_top.rs  mod.rs  ordering.rs  ordering_contract.rs  ordering_file.rs  ordering_visibility.rs
src/: lint_result.rs  (+4 more)
(+12 files in other folders)
