[package]
name = "solc-wrapper"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
svm-rs = { git = "https://github.com/roynalnaruto/svm-rs", features = ["blocking"] }
home = "0.5.4"
semver = { version = "1.0.14", features = ["serde"] }
regex = "1.7.0"
once_cell = "1.16.0"
thiserror = "1.0"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
open-fastrlp = "0.1.4"
hex = "0.4.3"
anyhow = "1.0"