[package]
name = "solidhunter-lib"
version = "0.0.1"
edition = "2021"
authors = ["Astrodevs Labs"]
license = "GPL-3.0-or-later"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0.29", features = ["derive"] }
colored = "2"
serde = { version = "1.0.149", features = ["derive"] }
solc-wrapper = { path = "../solc-wrapper" }
serde_json = "1.0.89"
anyhow = "1.0"
glob = "0.3.0"
thiserror = "1.0"
